examples/invalid/51_double_literal_leading_dot.lane
module Examples.Invalid.DoubleLiteralLeadingDot

pub let bad : Double = .5

